--- a/assignment/module3.css/style.css
+++ b/assignment/module3.css/style.css
@@ -1,3 +1,37 @@
+* {
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+	font-family: sans-serif, Arial, Verdana;
+}
+
+.navbar {
+	border-radius: 0;
+}
+
+.navbar-header {
+	height: 60px;
+}
+
 h1 {
-	color: red;
+	display: inline;
+	margin: 0;
+	position: absolute;
+	top: 10px;
+	left: 10px;
+	font-weight: bold;
+}
+
+#nav-list hr{
+	margin: 0;
+}
+
+#nav-list li {
+	text-align: center;
+	padding: 2px;
+	text-decoration: none;
+}
+
+.container-fluid .row .text {
+	background-color: #e6e6e6;
 }
